--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,20 +8,22 @@
     android:gravity="center_horizontal"
     android:padding="20dp"
     tools:context=".MainActivity">
-    <TextView
-        android:id="@+id/text_name"
+    <EditText
+        android:id="@+id/edit_name"
         android:layout_marginBottom="15dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="사용자이름"
+        android:editable="false"
+        android:hint="사용자이름"
         android:textSize="25sp"
         android:textColor="#03A9F4"/>
-    <TextView
-        android:id="@+id/text_email"
+    <EditText
+        android:id="@+id/edit_email"
         android:layout_marginBottom="15dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="E-mail"
+        android:hint="E-mail"
+        android:editable="false"
         android:textSize="25sp"
         android:textColor="#03A9F4"/>
     <Button
